--- a/web/appsettings.json
+++ b/web/appsettings.json
@@ -3,7 +3,7 @@
   "ConnectionStrings": {
     "FitnessTrackerContext": "Server=localhost;Database=FitnessTracker;User Id=sa;Password=yourStrong(!)Password;"
     ,
-    "AzureContext": "Server=is-seminarska-server.database.windows.net;Database=FitnessTracker;User Id=tim;Password=Informatika123!;"
+    "AzureContext": "Server=is-seminarska-server.database.windows.net;Database=FitnessTracker;User Id=tim;Password=removedForGitHub;"
   },
   "Logging": {
     "LogLevel": {
